[package]
name = "transaction-coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
mongodb = "2.8"
redis = { version = "0.24", features = ["tokio-comp"] }
kafka = "0.10"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
config = "0.14"
prometheus = "0.13"
lazy_static = "1.4"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
testcontainers = "0.15"
